# os_interceptor

./: README.md
driver/: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  bpm_handler.c  bpm_handler.h  cache_process_handler.c  cache_process_handler.h  check.sh  common.c  communication.c  driver_version.h.cmake  driver_version.h.empty  kcontroller_data_type.h  kcontroller_params.h  main.c  mem_handler.c  module_boot.c  module_debug.h  module_metadata.h  os_interceptor_data_type.h  os_interceptor_params.h  relay_interface.c  relay_interface.h  thread_task.c  wq_task.c
driver/bpm/: CMakeLists.txt  algorithm.c  bpm.c  bpm.h  hardening_policy.c  hardening_policy.h  macros.h  unicode.h
driver/cache_process/: cache_process.c
driver/crypto/: crypto.h
driver/lib_cache_process/: cache_process.c
driver/lib_crypto/: crypto.c  crypto.h
driver/lib_hooks/: hook_functions.c  syscall_stub.c
driver/lib_memory_mngr/: kmem_slab_pool.c  kmem_slab_pool_hash.c  rbtree_mempool_kmem_slab.c
driver/lib_network/: network.c
driver/lib_process/: process_scan.c
driver/network/: network.c  network.h
driver/patching/: hook_functions.c  patched_functions.c  syscall_stub.c  syscall_unstab.c  systemcall_interception.c  systemcall_interception.h  systemcall_interceptor.h
driver/policy/: algorithm.h  hardening_policy.c  hardening_policy_new.c  macros.h  policy.c  utils.c
driver/process/: process_scan.c
driver_shared/: CMakeLists.txt  driver_api.h
user/: Makefile  data_storage.cpp  data_type.h  main.cpp
